css/main.css
@import url('https://fonts.googleapis.com/css?family=Cabin:400,600|Karla|Open+Sans|Inconsolata');

* {
    box-sizing: border-box;
}

html,
body {
    margin: 0;
    padding: 0;
    background-color: rgb(235, 235, 235);
}

.page-wrapper {
    display: flex;
}

#navbar {
    width: 300px;
    height: calc(100% - 70px);
    border-right: 2px solid white;
    position: fixed;
    top: 70px;
    z-index: 1;
    background-color: #34675C;
    overflow: auto;
}

#main-doc {
    width: 100%;
    margin-left: 300px;
    overflow: hidden;
}

.navigation-header {
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Cabin", Verdana, sans-serif;
    font-size: 25px;
    letter-spacing: 2px;
    font-weight: 800;
    position: fixed;
    top: 0;
    z-index: 2;
    background-color: rgb(22, 44, 39);
    width: 300px;
    border-right: 2px solid white;
}

.navigation-header a {
    color: white;
    text-decoration: none;
}

.first-section {
    border-top: 2px solid white;
}

.nav-content {
    position: relative;
    height: 50px;
    border-bottom: 2px dashed white;
}

.nav-link {
    padding-left: 30px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    z-index: 10;
    text-decoration: none;
    color: white;
    font-family: "Karla", Verdana, sans-serif;
    font-size: 17px;
}

.nav-link:hover {
    font-size: 18px;
    font-weight: 700;
}

.main-section {
    margin: 30px;
}

.first-section-main {
    margin-top: 50px;
}

.main-section p {
    padding: 3px 0 3px 0;
}

.main-section ul li {
    padding: 0 0 15px 0;
}

.section-paragraph,
.section-list {
    text-align: justify;
    font-family: "Open Sans", Verdana, sans-serif;
    font-size: 15px;
}

.section-header {
    font-family: "Cabin", Verdana, sans-serif;
    font-size: 40px;
    font-weight: 700;
    letter-spacing: 2px;
}

.section-content {
    padding-left: 20px;
}

code {
    white-space: pre;
    line-height: 2;
    color: rgb(0, 25, 252);
    font-family: "Inconsolata", monospace;
}

.code-wrapper {
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 0 25px rgb(211, 211, 211);
    padding: 15px 0 15px 15px;
}

ul {
    margin-bottom: 0;
}

.no-top-margin {
    margin-top: 0;
}

@media screen and (max-width: 600px) {
    #navbar {
        width: 100%;
        height: 250px;
    }

    #main-doc {
        width: 100%;
        margin-top: 280px;
        margin-left: 0;
    }

    .navigation-header {
        width: 100%;
    }
}

